--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "audioop-lts>=0.2.1",
     "discord-py>=2.4.0",
+    "mistral>=19.0.0",
     "mistralai>=1.4.0",
     "python-dotenv>=1.0.1",
 ]
